--- a/BioFace/WebContent/WEB-INF/web.xml
+++ b/BioFace/WebContent/WEB-INF/web.xml
@@ -13,23 +13,23 @@
     <servlet-name>Resteasy</servlet-name>
     <url-pattern>/service/*</url-pattern>
   </servlet-mapping>
-  <security-constraint>
-    <web-resource-collection>
-      <web-resource-name>HtmlAuth</web-resource-name>
-      <description>application security constraints</description>
-      <url-pattern>/service/*</url-pattern>
-      <http-method>GET</http-method>
-      <http-method>POST</http-method>
-    </web-resource-collection>
-    <auth-constraint>
-      <role-name>App</role-name>
-    </auth-constraint>
-  </security-constraint>
-  <login-config>
-    <auth-method>BASIC</auth-method>
-    <realm-name>UserRoles simple realm</realm-name>
-  </login-config>
-  <security-role>
-    <role-name>App</role-name>
-  </security-role>
+<!--   <security-constraint> -->
+<!--     <web-resource-collection> -->
+<!--       <web-resource-name>HtmlAuth</web-resource-name> -->
+<!--       <description>application security constraints</description> -->
+<!--       <url-pattern>/service/*</url-pattern> -->
+<!--       <http-method>GET</http-method> -->
+<!--       <http-method>POST</http-method> -->
+<!--     </web-resource-collection> -->
+<!--     <auth-constraint> -->
+<!--       <role-name>App</role-name> -->
+<!--     </auth-constraint> -->
+<!--   </security-constraint> -->
+<!--   <login-config> -->
+<!--     <auth-method>BASIC</auth-method> -->
+<!--     <realm-name>UserRoles simple realm</realm-name> -->
+<!--   </login-config> -->
+<!--   <security-role> -->
+<!--     <role-name>App</role-name> -->
+<!--   </security-role> -->
 </web-app>
